// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test GenreItem component Active GenreItem component is created and rendered correctly 1`] = `
<li
  className="catalog__genres-item catalog__genres-item--active"
>
  <a
    className="catalog__genres-link"
    href="#"
    onClick={[Function]}
  >
    All genres
  </a>
</li>
`;

exports[`Test GenreItem component Default GenreItem component is created and rendered correctly 1`] = `
<li
  className="catalog__genres-item"
>
  <a
    className="catalog__genres-link"
    href="#"
    onClick={[Function]}
  >
    Comedies
  </a>
</li>
`;
